--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "your awesome title"
-  subheading: "your awesome subheading"
+  heading: "Gesine Linn Hamberger"
+  subheading: "Passionate about Efficiency, Innovation & Exceptional Experiences"
   banner: "your awesome url"
